--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-django>=5.0,<5.1
+Brotli==1.1.0
+dj-database-url==2.1.0
+Django==5.0.1
 gunicorn==21.2.0
-dj-database-url>=2.0,<3.0
-whitenoise==6.0
+whitenoise==6.6.0
